# experimental-db

./: .gitignore  .prototools  Cargo.toml  README.md  bun.lockb  index.ts  package.json
core/: Cargo.toml
core/src/: book.rs  book_inner.rs  lib.rs  on-disk.rs  page.rs  page_entry.rs  page_inner.rs  page_layout.rs  page_meta.rs  sample.rs  tests.rs
generator/: Cargo.toml
generator/src/: infer_schema.rs  main.rs  src_renderer.rs
generator/src/infer_schema/: components.rs
generator/src/infer_schema/components/: table_builder.rs
generator/src/src_renderer/: graphs.rs  tables.rs
