[package]
  edition = "2021"
  name    = "experimental-db-core"
  version = "0.1.0"

[dependencies]
  bumpalo = { version = "3.16.0", features = [
    "allocator_api",
    "boxed",
    "collections",
    "serde",
    "std",
  ] }
  derive_builder = "0.20.0"
  hashbrown = { version = "0.14.5", features = ["nightly", "serde"] }
  memmap2 = "0.9.5"
  parking_lot = { version = "0.12.3", features = ["arc_lock", "serde"] }
  petgraph = "0.6.5"
  rand = "0.8.5"
  serde = { version = "1.0.209", features = ["alloc", "derive"] }
  serde_json = { version = "1.0.127", features = ["alloc", "preserve_order"] }
  sha2 = "0.10.8"
