[package]
  edition = "2021"
  name    = "experimental-db-core"
  version = "0.1.0"

[dependencies]
anyhow = "1.0.89"
  derive_builder = "0.20.0"
dirs = "5.0.1"
  memmap2        = "0.9.5"
  parking_lot    = { version = "0.12.3", features = ["arc_lock", "serde"] }
  petgraph       = "0.6.5"
  rand           = "0.8.5"
  serde          = { version = "1.0.209", features = ["alloc", "derive"] }
  serde_json     = { version = "1.0.127", features = ["alloc", "preserve_order"] }
  sha2           = "0.10.8"
